mobile and tablet version fixed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,9 @@
 <section class="header">
   <div class="content-container overlay">
-    <ul class="header-layout">
-      <li class="header-layout-item">
-        <a class="link" href="./"
-          ><picture>
+    <div class="header-layout">
+      <div class="main-menu">
+        <a class="link" href="./">
+          <picture>
             <source
               srcset="./images/logo.png 1x, ./images/logo@2x.png 2x"
               media="(min-width: 320px)"
@@ -13,61 +13,82 @@
               src="./images/logo.png"
               alt="logo"
               width="200"
-            /> </picture
-        ></a>
-        <button class="btn header-btn positioned-btn" type="button">
+            />
+          </picture>
+        </a>
+        <button
+          class="mobile-menu-btn open"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          menu-button-open
+        >
+          <svg
+            class="mobile-menu-icon"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use
+              class="mobile-menu-burger"
+              href="./images/sprite.svg#icon-Burger"
+            ></use>
+          </svg>
+        </button>
+        <div class="mobile-menu" id="menu-container" data-menu>
+          <div class="mobile-menu-content">
+            <button
+              class="mobile-menu-btn close"
+              aria-expanded="false"
+              aria-controls="menu-container"
+              menu-button-close
+            >
+              <svg
+                class="mobile-menu-icon"
+                aria-label="Переключатель мобильного меню"
+              >
+                <use
+                  class="mobile-menu-close"
+                  href="./images/sprite.svg#icon-close"
+                ></use>
+              </svg>
+            </button>
+            <button class="btn header-btn" type="button">
+              Buy now
+              <svg class="header-btn-icon">
+                <use href="./images/sprite.svg#icon-bracket"></use>
+              </svg>
+            </button>
+            <nav class="site-nav">
+              <ul class="site-nav-list">
+                <li class="site-nav-item">
+                  <a class="link site-nav-link current" href="">Home</a>
+                </li>
+                <li class="site-nav-item">
+                  <a class="link site-nav-link" href="#slider">About us</a>
+                </li>
+                <li class="site-nav-item">
+                  <a class="link site-nav-link" href="#tradition"
+                    >How it’s made?</a
+                  >
+                </li>
+                <li class="site-nav-item">
+                  <a class="link site-nav-link" href="#products"
+                    >Our products</a
+                  >
+                </li>
+                <li class="site-nav-item">
+                  <a class="link site-nav-link" href="#outlets">Contact</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <button class="positioned-btn" type="button">
           Buy now
           <svg class="header-btn-icon">
             <use href="./images/sprite.svg#icon-bracket"></use>
           </svg>
         </button>
-      </li>
-      <li class="header-layout-item">
-        <div class="menu-container" id="menu-container" data-menu>
-          <button class="btn header-btn" type="button">
-            Buy now
-            <svg class="header-btn-icon">
-              <use href="./images/sprite.svg#icon-bracket"></use>
-            </svg>
-          </button>
-          <nav class="site-nav">
-            <ul class="site-nav-list">
-              <li class="site-nav-item">
-                <a class="link site-nav-link current" href="">Home</a>
-              </li>
-              <li class="site-nav-item">
-                <a class="link site-nav-link" href="#slider">About us</a>
-              </li>
-              <li class="site-nav-item">
-                <a class="link site-nav-link" href="#tradition"
-                  >How it’s made?</a
-                >
-              </li>
-              <li class="site-nav-item">
-                <a class="link site-nav-link" href="#products">Our products</a>
-              </li>
-              <li class="site-nav-item">
-                <a class="link site-nav-link" href="#outlets">Contact</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <button
-          class="menu-btn"
-          aria-expanded="false"
-          aria-controls="menu-container"
-          data-menu-button
-        >
-          <svg class="menu-icon" aria-label="Переключатель мобильного меню">
-            <use
-              class="menu-burger"
-              href="./images/sprite.svg#icon-Burger"
-            ></use>
-            <use class="menu-close" href="./images/sprite.svg#icon-close"></use>
-          </svg>
-        </button>
-      </li>
-    </ul>
+      </div>
+    </div>
     <div class="content-container hero">
       <div class="hero-title-container">
         <h1 class="hero-title">
@@ -136,7 +157,7 @@
         </div>
       </div>
 
-      <div class="icecr-bg">
+      <div class="header-ice-cream">
         <picture>
           <source
             srcset="
@@ -154,13 +175,6 @@
           />
           <source
             srcset="
-              ./images/1-mobile/header-ice-cream.webp    1x,
-              ./images/1-mobile/header-ice-cream@2x.webp 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <source
-            srcset="
               ./images/3-desktop/header-ice-cream.png    1x,
               ./images/3-desktop/header-ice-cream@2x.png 2x
             "
@@ -173,18 +187,11 @@
             "
             media="(min-width: 768px)"
           />
-          <source
-            srcset="
-              ./images/1-mobile/header-ice-cream.png    1x,
-              ./images/1-mobile/header-ice-cream@2x.png 2x
-            "
-            media="(max-width: 767px)"
-          />
           <img
-            class="image img-icecr"
-            src="./images/1-mobile/header-ice-cream.png"
+            class="image img-ice-cream"
+            src="./images/2-tablet/header-ice-cream.png"
             alt="logo"
-            width="236"
+            width="171"
           />
         </picture>
       </div>
