--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,11 +14,11 @@ $first-title-color: #d41443;
 $second-title-color: #ffa5ba;
 
 // background-colors
-$heder-bg-color: #ffb8ca;
+$header-bg-color: #ffb8ca;
 $main-bg-color: #e5e5e5;
 $second-bg-color: #fff5f6;
 $slider-bg-color: #fafafa;
-$mobail-menu-bg-color: #e17992;
+$mobile-menu-bg-color: #e17992;
 
 // button-colors
 $button-bg-1: #ffffff;
