додає зображення png

--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,6 +1,8 @@
 .head-container {
     position: relative;
 
+    height: 502px;
+
     background-color: $accent-color;
     @media screen  and (min-width:768px){
         padding-top: 37px;
