--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -82,6 +82,15 @@
                    <p>23<span>food trucks</span></p>
                 </div>
             </div>
+            <picture class="milk">
+                <source srcset="././images/hero/milk_tablet.jpg 1x, ././images/hero/milk_tablet@2x.jpg 2x" media="(max-width: 1199px)"/>
+                <source srcset="././images/hero/milk_desktop.jpg 1x, ././images/hero/milk_desktop@2x.jpg 2x"  media="(min-width: 1200px)"/>
+                <img
+                  src="././images/section1/img11-tablet.jpg"
+                  alt="bottle with milk"
+                />  
+            </picture>
+            
 
 </section>
 <script src="../menu.js"></script>
