Добавляет офигенно отредактированный коллаж на страницу

--- a/src/partials/cow.html
+++ b/src/partials/cow.html
@@ -40,15 +40,5 @@
             </li>
         </ul>    
     </div>
-    <div class="container">
-        <picture>
-            <source srcset="./images/desktop/co/collage.jpg 1x, ./images/desktop/co/collage@2x.jpg 2x"
-                media="(min-width: 1050px)">
-            <source srcset="./images/tablet/co/collage.jpg 1x, ./images/tablet/co/collage@2x.jpg 2x" 
-                media="(min-width: 768px)">
-            <source srcset="./images/mobile/co/collage@2x.jpg 2x"
-                media="(min-width: 320px)">  
-            <img class="collage" src="./images/mobile/co/collage.jpg" alt="Collage" width="320">
-        </picture>
-    </div>
 </section>
+<div class="collage"></div>
