--- a/src/sass/layouts/_cow.scss
+++ b/src/sass/layouts/_cow.scss
@@ -16,12 +16,12 @@
   }
 
   @include for-size(tablet) {
-    padding-bottom: 246px;
+    padding-bottom: 140px;
     background-image: none;
   }
 
   @include for-size(desktop) {
-    padding-bottom: 310px;
+    padding-bottom: 139px;
     background-image: url(../images/desktop/cow/cow-bg.png);
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -283,38 +283,22 @@
   }
 }
 
-// .collage {
-//   position: absolute;
-//   bottom: -80px;
-//   left: 50%;
-//   transform: translate(-50%);
-//   width: 320px;
-
-//   @include for-size(tablet) {
-//     bottom: -157px;
-//     width: 768px;
-//   }
-
-//   @include for-size(desktop) {
-//     bottom: -259px;
-//     width: 100%;
-//   }
-// }
 .collage {
-  display: block;
-  width: 100%;
-  height: auto;
+  height: 122px;
+  background-image: url(../images/mobile/cow/collage.jpg),
+    linear-gradient(to bottom, $bg-pink 39.77%, $bg-white 39.77%);
+  background-repeat: no-repeat;
+  background-position: center;
 
-  margin-bottom: 80px;
-
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-bottom: 121px;
+  @include for-size(tablet) {
+    height: 264px;
+    background-image: url(../images/tablet/cow/collage.jpg),
+      linear-gradient(to bottom, $bg-pink 39.77%, $bg-white 39.77%);
   }
 
   @include for-size(desktop) {
-    max-width: 1280px;
-    margin-bottom: 123px;
-    margin-left: auto;
-    margin-right: auto;
+    height: 430px;
+    background-image: url(../images/desktop/cow/collage.jpg),
+      linear-gradient(to bottom, $bg-pink 39.77%, $bg-white 39.77%);
   }
 }
