--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -14,7 +14,10 @@
   overflow: hidden;
 }
 
-.main-nav .nav-link:hover, .main-nav .nav-link:focus, .nav-link:hover, .nav-link:focus {
+.main-nav .nav-link:hover,
+.main-nav .nav-link:focus,
+.nav-link:hover,
+.nav-link:focus {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -224,7 +227,8 @@ address {
   font-family: 'DM Sans', sans-serif;
 }
 
-.main-nav .nav-link:hover, .main-nav .nav-link:focus {
+.main-nav .nav-link:hover,
+.main-nav .nav-link:focus {
   color: #d41443;
   transition-property: color;
 }
@@ -253,7 +257,8 @@ address {
     background-color: #ffffff;
     color: #d41443;
   }
-  .btn-header:hover, .btn-header:focus {
+  .btn-header:hover,
+  .btn-header:focus {
     background-color: #ecebeb;
   }
 }
@@ -358,7 +363,8 @@ address {
   font-family: 'DM Sans', sans-serif;
 }
 
-.nav-link:hover, .nav-link:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: #d41443;
   transition-property: color;
 }
@@ -566,7 +572,8 @@ address {
   align-items: center;
 }
 
-.arrow-button:hover, .arrow-button:focus {
+.arrow-button:hover,
+.arrow-button:focus {
   border: 1px solid #d41443;
 }
 
@@ -619,7 +626,9 @@ address {
   background-position: center;
 }
 
-@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
   .cow {
     background-image: url(../images/mobile/cow/cow-bg@2x.png);
   }
@@ -639,7 +648,9 @@ address {
   }
 }
 
-@media screen and (min-width: 1050px) and (min-device-pixel-ratio: 2), screen and (min-width: 1050px) and (min-resolution: 192dpi), screen and (min-width: 1050px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1050px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1050px) and (min-resolution: 192dpi),
+  screen and (min-width: 1050px) and (min-resolution: 2dppx) {
   .cow {
     background-image: url(../images/desktop/cow/cow-bg@2x.png);
   }
@@ -935,28 +946,6 @@ address {
 @media (min-width: 1050px) {
   .cow-grid-item-info {
     font-size: 16px;
-  }
-}
-
-.collage {
-  position: absolute;
-  bottom: -80px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 320px;
-}
-
-@media (min-width: 768px) {
-  .collage {
-    bottom: -157px;
-    width: 768px;
-  }
-}
-
-@media (min-width: 1050px) {
-  .collage {
-    bottom: -259px;
-    width: 100%;
   }
 }
 
