--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,5 +1,5 @@
 <section class="manufacture">
-    <div class="container">
+    <div class="manufacture-container">
         <p class="manufacture-title">tradition and love</p>
         <h2 class="manufacture-subtitle">how it’s made?</h2>
         <div class="cont-box">
@@ -59,5 +59,17 @@
                 </p>
             </li>
         </ul>
+    </div>
+</section>
+<section class="manufacture-gallery">
+    <div class="manufacture-container">
+        <picture class="gallery-desk">
+            <source srcset="./images/mobile/galary.png 1x ./src/images/mobile/galary@2x.png 2x"
+                media="(max-width:767px)" />
+            <source srcset="./images/tablet/galary.png 1x ./src/images/tablet/galary@2x.png 2x"
+                media="(min-width:768px)" />
+            <source srcset="./images/galary.jpg 1x ./src/images/galary@2x.jpg 2x" media="(min-width:1200px)" />
+            <img src="./images/galary.jpg" alt="cow" />
+        </picture>
     </div>
 </section>
