--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -1,3 +1,37 @@
+.manufacture-container {
+  margin: 0 auto;
+  width: 100%;
+
+  @media screen and (min-width: 320px) {
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+  @media screen and (min-width: 1200px) {
+    position: relative;
+    width: 1200px;
+    padding-left: 75px;
+    padding-right: 75px;
+  }
+}
+
+%manufacture-container {
+  margin: 0 auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .manufacture {
   background-color: $footer-bg;
   padding-top: 125px;
@@ -169,4 +203,10 @@
   font-size: 12px;
   line-height: 1.66;
   color: #000000;
+}
+
+.gallery-desk {
+  display: inline-block;
+  width: 364px;
+  height: auto;
 }
