Исправил позиционирование фонового элемента

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -5,7 +5,7 @@
     background-image: url('./../images/bitmap/hero/ellipse.png');
     background-size: 346px 344px;
     background-repeat: no-repeat;
-    background-position: 36px 21px;
+    background-position: left calc(50% + 36px) top 21px;
   }
 
   @media screen and (min-width: $tablet) {
