desktop version done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,95 +1,110 @@
 <section class="header">
   <div class="content-container overlay">
-    <div class="header-layout">
-      <div class="main-menu">
-        <a class="link" href="./">
-          <picture>
-            <source
-              srcset="./images/logo.png 1x, ./images/logo@2x.png 2x"
-              media="(min-width: 320px)"
-            />
-            <img
-              class="image logo"
-              src="./images/logo.png"
-              alt="logo"
-              width="200"
-            />
-          </picture>
-        </a>
-        <button
-          class="mobile-menu-btn open"
-          aria-expanded="false"
-          aria-controls="menu-container"
-          menu-button-open
+    <div class="main-menu">
+      <a class="link" href="./">
+        <picture>
+          <source
+            srcset="./images/logo.png 1x, ./images/logo@2x.png 2x"
+            media="(min-width: 320px)"
+          />
+          <img
+            class="image logo"
+            src="./images/logo.png"
+            alt="logo"
+            width="200"
+          />
+        </picture>
+      </a>
+      <button
+        class="mobile-menu-btn open"
+        aria-expanded="false"
+        aria-controls="menu-container"
+        menu-button-open
+      >
+        <svg
+          class="mobile-menu-icon"
+          aria-label="Переключатель мобильного меню"
         >
-          <svg
-            class="mobile-menu-icon"
-            aria-label="Переключатель мобильного меню"
+          <use
+            class="mobile-menu-burger"
+            href="./images/sprite.svg#icon-Burger"
+          ></use>
+        </svg>
+      </button>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li class="main-nav-item">
+            <a class="main-nav-link link" href="./">Home</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link link" href="#slider">About us</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link link" href="#products">How it's made?</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link link" href="#products">Our products</a>
+          </li>
+          <li class="main-nav-item">
+            <a class="main-nav-link link" href="#outlets">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="mobile-menu" id="menu-container" data-menu>
+        <div class="mobile-menu-content">
+          <button
+            class="mobile-menu-btn close"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            menu-button-close
           >
-            <use
-              class="mobile-menu-burger"
-              href="./images/sprite.svg#icon-Burger"
-            ></use>
-          </svg>
-        </button>
-        <div class="mobile-menu" id="menu-container" data-menu>
-          <div class="mobile-menu-content">
-            <button
-              class="mobile-menu-btn close"
-              aria-expanded="false"
-              aria-controls="menu-container"
-              menu-button-close
+            <svg
+              class="mobile-menu-icon"
+              aria-label="Переключатель мобильного меню"
             >
-              <svg
-                class="mobile-menu-icon"
-                aria-label="Переключатель мобильного меню"
-              >
-                <use
-                  class="mobile-menu-close"
-                  href="./images/sprite.svg#icon-close"
-                ></use>
-              </svg>
-            </button>
-            <button class="btn header-btn" type="button">
-              Buy now
-              <svg class="header-btn-icon">
-                <use href="./images/sprite.svg#icon-bracket"></use>
-              </svg>
-            </button>
-            <nav class="site-nav">
-              <ul class="site-nav-list">
-                <li class="site-nav-item">
-                  <a class="link site-nav-link current" href="">Home</a>
-                </li>
-                <li class="site-nav-item">
-                  <a class="link site-nav-link" href="#slider">About us</a>
-                </li>
-                <li class="site-nav-item">
-                  <a class="link site-nav-link" href="#tradition"
-                    >How it’s made?</a
-                  >
-                </li>
-                <li class="site-nav-item">
-                  <a class="link site-nav-link" href="#products"
-                    >Our products</a
-                  >
-                </li>
-                <li class="site-nav-item">
-                  <a class="link site-nav-link" href="#outlets">Contact</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+              <use
+                class="mobile-menu-close"
+                href="./images/sprite.svg#icon-close"
+              ></use>
+            </svg>
+          </button>
+          <button class="btn header-btn" type="button">
+            Buy now
+            <svg class="header-btn-icon">
+              <use href="./images/sprite.svg#icon-bracket"></use>
+            </svg>
+          </button>
+          <nav class="site-nav">
+            <ul class="site-nav-list">
+              <li class="site-nav-item">
+                <a class="link site-nav-link current" href="./">Home</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#slider">About us</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#tradition"
+                  >How it’s made?</a
+                >
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#products">Our products</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#outlets">Contact</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <button class="positioned-btn" type="button">
-          Buy now
-          <svg class="header-btn-icon">
-            <use href="./images/sprite.svg#icon-bracket"></use>
-          </svg>
-        </button>
       </div>
+      <button class="positioned-btn" type="button">
+        Buy now
+        <svg class="positioned-btn-icon">
+          <use href="./images/sprite.svg#icon-bracket"></use>
+        </svg>
+      </button>
     </div>
-    <div class="content-container hero">
+    <div class="hero">
       <div class="hero-title-container">
         <h1 class="hero-title">
           <span class="hero-accent">ice cream made with</span>passion
