Редактирует верхний отступ секции slider

--- a/src/sass/layouts/_slider.scss
+++ b/src/sass/layouts/_slider.scss
@@ -1,28 +1,27 @@
 $lh-slider-block: 30px;
 .slider {
-  margin-top: 155px;
+  margin-top: 80px;
   margin-bottom: 85px;
 
   @include for-size(tablet) {
-    margin-top: 280px;
+    margin-top: 120px;
     margin-bottom: 120px;
   }
 
   @include for-size(desktop) {
-    margin-top: 380px;
+    margin-top: 125px;
     margin-bottom: 130px;
   }
 }
 .slider-block {
   position: relative;
 }
-.swiper-container{
+.swiper-container {
   width: 100%;
   margin: 0 auto;
 
-
   @include for-size(mobile) {
-    margin-right: 20px ;
+    margin-right: 20px;
     margin-left: 20px;
   }
 
@@ -33,8 +32,6 @@ $lh-slider-block: 30px;
   @include for-size(desktop) {
     width: 926px;
   }
-
-
 }
 
 .swiper-slide {
@@ -77,9 +74,11 @@ $lh-slider-block: 30px;
     padding: 0 30px;
   }
 
-
-
-  background-image: linear-gradient(transparent, transparent $lh-slider-block - 1px, $cards-line $lh-slider-block - 1px);
+  background-image: linear-gradient(
+    transparent,
+    transparent $lh-slider-block - 1px,
+    $cards-line $lh-slider-block - 1px
+  );
   background-size: 100% $lh-slider-block;
 
   z-index: 1;
@@ -94,7 +93,7 @@ $lh-slider-block: 30px;
     left: 0;
     top: -10px;
 
-    background: url("../images/slider/apostrophe.svg") no-repeat;
+    background: url('../images/slider/apostrophe.svg') no-repeat;
     z-index: -1;
   }
 }
@@ -136,8 +135,7 @@ $lh-slider-block: 30px;
   margin-top: 30px;
 }
 
-.slider-block .swiper-pagination-bullet{
-
+.slider-block .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: $slider-grey-dots;
@@ -147,10 +145,10 @@ $lh-slider-block: 30px;
 
   &:first-child {
     border-radius: 0;
-    background-image: url("../images/slider/icon-home.svg");
+    background-image: url('../images/slider/icon-home.svg');
     background-color: transparent;
     &.swiper-pagination-bullet-active {
-      background-image: url("../images/slider/icon-home-active.svg");
+      background-image: url('../images/slider/icon-home-active.svg');
     }
   }
 
@@ -162,5 +160,3 @@ $lh-slider-block: 30px;
     background-color: $slider-icons;
   }
 }
-
-
