Добавил правки в секцию products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,8 @@
-<section class="section-products">
+<section class="section-products" id="products">
     <div class="container">
         <p class="product-benefit">100% natural</p>
 
-        <h1 class="product-title">products</h1>
+        <h2 class="product-title">products</h2>
 
         <ul class="list product-list">
 
@@ -25,17 +25,18 @@
 
 
                 <div class="product-content">
-                    <h2 class="product-item-title">ice cream</h2>
+                    <h3 class="product-item-title">ice cream</h3>
                     <p class="product-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor
-                        incididunt ut labore et. dolore magna aliqua facilisis. </p>
+                        incididunt ut labore et.</p>
+                    <a href="" class="link product-link">
+                        <svg width="40" height="40">
+                            <use href="./images/vector/arrow-right.svg#image0"></use>
+                        </svg>
+                    </a>
                 </div>
 
-                <a href="" class="link product-link">
-                    <svg width="40" height="40">
-                        <use href="./images/vector/arrow-right.svg#image0"></use>
-                    </svg>
-                </a>
+
             </li>
 
             <li class="product-item beige-bg">
@@ -55,16 +56,19 @@
 
 
                 <div class="product-content">
-                    <h2 class="product-item-title">ice coffee</h2>
+                    <h3 class="product-item-title">ice coffee</h3>
                     <p class="product-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor
-                        incididunt ut labore et. dolore magna aliqua facilisis. </p>
+                        incididunt ut labore et.</p>
+
+                    <a href="" class="link product-link">
+                        <svg width="40" height="40">
+                            <use href="./images/vector/arrow-right.svg#image0"></use>
+                        </svg>
+                    </a>
                 </div>
-                <a href="" class="link product-link">
-                    <svg width="40" height="40">
-                        <use href="./images/vector/arrow-right.svg#image0"></use>
-                    </svg>
-                </a>
+
+
             </li>
 
             <li class="product-item green-bg">
@@ -85,16 +89,16 @@
 
 
                 <div class="product-content">
-                    <h2 class="product-item-title">milkshakes</h2>
+                    <h3 class="product-item-title">milkshakes</h3>
                     <p class="product-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor
-                        incididunt ut labore et. dolore magna aliqua facilisis. </p>
+                        incididunt ut labore et.</p>
+                    <a href="" class="link product-link">
+                        <svg width="40" height="40">
+                            <use href="./images/vector/arrow-right.svg#image0"></use>
+                        </svg>
+                    </a>
                 </div>
-                <a href="" class="link product-link">
-                    <svg width="40" height="40">
-                        <use href="./images/vector/arrow-right.svg#image0"></use>
-                    </svg>
-                </a>
             </li>
         </ul>
     </div>
