--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -73,6 +73,10 @@
   @media screen and (min-width: $tablet) {
     display: flex;
     justify-content: space-between;
+
+    @media screen and (min-width: $desktop) {
+      justify-content: center;
+    }
   }
 
   .product-item {
@@ -90,7 +94,12 @@
       @media screen and (max-width: 739px) {
         margin-bottom: 130px;
       }
+
+      @media screen and (min-width: $desktop) {
+        margin-right: 30px;
+      }
     }
+
     @media screen and (min-width: $tablet) {
       width: 220px;
       padding-top: 152px;
@@ -107,17 +116,18 @@
     }
 
     .product-content {
-      margin-bottom: 30px;
+      // padding-bottom: 30px;
 
-      @media screen and (min-width: $tablet) {
-        margin-bottom: 40px;
-      }
+      // @media screen and (min-width: $tablet) {
+      //   margin-bottom: 40px;
+      // }
 
-      @media screen and (min-width: $desktop) {
-        margin-bottom: 62px;
-      }
+      // @media screen and (min-width: $desktop) {
+      //   margin-bottom: 62px;
+      // }
 
       .product-item-title {
+        position: relative;
         margin: 0;
         padding-bottom: 30px;
         font-family: Titan One;
@@ -131,10 +141,18 @@
           display: block;
           width: 26px;
           height: 6px;
-          //   background-image: url(../images/vector/dots.svg);
+          margin-left: auto;
+          margin-right: auto;
+          position: absolute;
+          left: 50%;
+          bottom: 0;
+          transform: translate(-50%);
 
+          background-image: url(./../images/vector/dots.svg);
+          background-repeat: no-repeat;
           background-size: contain;
           color: $color-main;
+          text-align: center;
         }
 
         @media screen and (min-width: $desktop) {
@@ -146,20 +164,23 @@
 
       .product-item-text {
         margin: 0;
+        padding-top: 30px;
+        padding-bottom: 40px;
         font-family: DM Sans;
         font-weight: 700;
         font-size: 14px;
-        letter-spacing: 1.5;
+        line-height: 1.5;
         text-align: center;
         letter-spacing: 0.04em;
 
         color: $color-main;
 
         @media screen and (min-width: $tablet) {
-          letter-spacing: 1.78;
+          line-height: 1.78;
         }
 
         @media screen and (min-width: $desktop) {
+          padding-bottom: 62px;
           font-size: 16px;
           line-height: 1.75;
         }
@@ -187,6 +208,7 @@
 
       @media screen and (min-width: $desktop) {
         left: 12%;
+        top: -30%;
       }
     }
 
