--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -63,10 +63,14 @@
         </ul>
         <div class="locations-buttons">
             <a class="locations-btn" href="" target="_blank" rel="noreferrer noopener">
-                Our Locations >
+                Our Locations 
+                <svg class="location-svg">
+                  <use href="./images/icons/sprite.svg#arrow"></use>
+                </svg>
             </a>
             <a class="locations-btn" href="" target="_blank" rel="noreferrer noopener">
-                Franchise >
+                Franchise 
+                <img class="location-svg" src="./images/icons/vector.svg" alt="arrow-right" width="7" height="10">
             </a>
         </div>
     </div>
