--- a/src/sass/layouts/_section-locations.scss
+++ b/src/sass/layouts/_section-locations.scss
@@ -1,15 +1,12 @@
 .section-locations {
-  margin-top: 84px;
   padding-bottom: 29px;
   background-color: $section-background;
 
   @include for-size(tablet) {
-    margin-top: 78px;
     padding-bottom: 80px;
   }
 
   @include for-size(desktop) {
-    margin-top: 102px;
     padding-bottom: 63px;
     background-image: url('../images/desktop_background_pink_1x.png');
     background-repeat: no-repeat;
@@ -94,5 +91,19 @@
     @include for-size(desktop) {
       width: 180px;
     }
+  }
+}
+
+.location-svg {
+  display: block;
+  width: 7px;
+  height: 10px;
+  margin-left: 8px;
+
+  @include for-size(tablet) {
+    margin-left: 13px;
+  }
+  @include for-size(desktop) {
+    margin-left: 14px;
   }
 }
