Add css for how-its-made

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,8 @@
 @import './utils/vars';
 @import './swiper-slide/swiper';
 @import './footer/footer__partial';
+@import './made/made';
+
+
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap');
