--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -8,6 +8,10 @@
   @media screen and (min-width: 768px) {
     height: 544px;
   }
+
+  @media screen and (min-width: 1280px) {
+    height: 556px;
+  }
 }
 .outlets-list {
   position: absolute;
@@ -162,7 +166,7 @@
 
   @media screen and (min-width: 1280px) {
     font-size: 16px;
-    line-height: 1.83;
+    line-height: 1.86;
   }
 }
 .timetable-list {
@@ -171,6 +175,10 @@
 
   @media screen and (min-width: 768px) {
     padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-bottom: 32px;
   }
 }
 .timetable-desc {
@@ -185,12 +193,21 @@
     font-size: 14px;
     line-height: 1.86;
   }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+    line-height: 1.86;
+  }
 }
 .outlets-contacts {
   margin-top: 25px;
 
   @media screen and (min-width: 768px) {
     margin-top: 30px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 32px;
   }
 }
 .contacts-item {
@@ -203,6 +220,11 @@
 
   @media screen and (min-width: 768px) {
     font-size: 14px;
+    line-height: 1.83;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
     line-height: 1.83;
   }
 }
